# ttb_label_checker

./: .firebaserc  .gitignore  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  GEMINI.md  NEXT_STEPS.md  README.md  SETUP.md  firebase.json
.github/workflows/: ci.yml  firebase-deploy.yml
docs/: APPROACH_EXPLANATION.md  BUG_FIX_NEWLINES.md  COMPLIANCE_SCORING.md  MANUAL_TESTING_GUIDE.md  OCR_IMPROVEMENTS.md  PHASE_2.md  images_to_generate.md  instructions.md  prd.md  regulatoryrequirements.md  tasks.xml
docs/firebase_context/: DEPLOYMENT_CHECKLIST.md  SETUP.md
docs/progress_tracking/: CURRENT_STATUS.md  FIRST_SHOT_FAILURES.md
docs/progress_tracking/archive/: PHASES_3_AND_4.md
frontend/: .env.local.example  apphosting.production.yaml  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ImageUpload.tsx  LabelForm.tsx  VerificationResults.tsx
frontend/src/lib/: api.ts  validation.ts
frontend/src/lib/__tests__/: api.test.ts  validation.test.ts
frontend/src/types/: index.ts
functions/: .env.example  main.py  models.py  ocr.py  pyproject.toml  requirements.txt  verification.py
functions/tests/: README.md  __init__.py  conftest.py  test_models.py  test_ocr.py  test_verification.py
