[project]
name = "ttb-label-checker-functions"
version = "0.1.0"
description = "Firebase Cloud Functions for TTB Label Verification System"
requires-python = ">=3.11"
dependencies = [
    "firebase-functions>=0.4.0",
    "firebase-admin>=6.5.0",
    "google-cloud-vision>=3.7.0",
    "pillow>=10.3.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = """
    -v
    --strict-markers
    --tb=short
    --cov=.
    --cov-report=term-missing
    --cov-report=html
"""
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require external services)",
    "slow: Slow tests (>1 second)",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
